@@ -1,3 +1,4 @@
+- ErmaC : getCPUTick() helper function ( http://www.insanelymac.com/forum/topic/301350-lets-make-random-seed-really-random/ )
 - ErmaC : Add Yosemite Icons detection for chameleon UI
 - blackosx : Add chameleon UI Icons for Yosemite
 - ErmaC : Use macro instead of full checkOSVersion
